--- a/banana_config.json
+++ b/banana_config.json
@@ -2,23 +2,11 @@
     "name": "",
     "category": "",
     "example_input": {
-        "prompt": "Hello I am a [MASK] model."
+        "prompt": "beautiful melody"
     },
     "example_output": {
-        "outputs":[
-            {
-                "score":0.13177461922168732,
-                "token":4827,
-                "token_str":"fashion",
-                "sequence":"hello i am a fashion model."
-            },
-            {
-                "score":0.1120428815484047,
-                "token":2535,
-                "token_str":"role",
-                "sequence":"hello i am a role model."
-            }
-        ]
+        "audio": "BASE64_OR_LATIN1_ENCODED_WAV_DATA",
+        "prompt": "beautiful melody"
     },
     "version": "1"
 }
